feat: Introduce dependency audit-check
This change introduces dependency audit checks when submitting pull
requests on github. Motivation behind this change is to avoid
introducing dependency vulnerabilities into master for future changes
but also if new vulnerabilities are detected developers wont be able to
introduce new changes before those vulnerabilities are fixed.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,7 @@ jobs:
           npm run prettier-check
           npm run build
           npm test
+          npm run audit-check
 
       - name: "Extract and export RELEASE_VERSION"
         if: success() && startsWith(github.ref, 'refs/tags/v')
