--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "manifest": "PROD_MANIFEST=true node scripts/generate-manifest.js",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags"
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
+    "audit-check": "node ./scripts/checkVulnerabilities.js"
   },
   "pre-commit": [
     "prettier-check",
